--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -48,6 +48,7 @@ body
   width: 1920px;
   height: 901px;
   display: flex;
+  overflow: hidden;
 }
 .homeleft
 {
@@ -56,6 +57,10 @@ body
 }
 .panelka1
 {
+  background: url('../img/panelka1.svg');
+  display: block;
+  width: 360px;
+  height: 905px;
   position: relative;
   margin-top: 10px;
 }
@@ -189,7 +194,7 @@ transition: 0.35s;
 .homeright
 {
   display: flex;
-  width: 672px;
+  width: 675px;
   height: 901px;
   margin-left: 546px;
 }
@@ -197,18 +202,21 @@ transition: 0.35s;
 {
   position: relative;
   margin-left: 413px;
+  width: 269px;
+  height: 906px;
 }
 .panelka4
 {
   position: relative;
   margin-left: -500px;
+
 }
 .panelka3
 {
   position: relative;
-  margin-left: -443px;
-  margin-top: 171px;
-  top: 4px;
+  margin-left: -427px;
+  margin-top: 202px;
+  top: 7px;
 }
 .rectangle3
 {
@@ -218,4 +226,113 @@ transition: 0.35s;
   top: 259px;
   left: 1668px;
   background: #0B0CB9;
+}
+.rectangle4
+{
+  position: absolute;
+  width: 151px;
+  height: 470px;
+  top: 429px;
+  left: 1586px;
+  background: #2829FB;
+}
+.windowhome3:hover
+{
+background: #FFE600;
+cursor: pointer;
+transition: 0.35s;
+}
+.windowhome3
+{
+  position: relative;
+  width: 47px;
+  height: 18px;
+  margin: 10px;
+  left: 8px;
+  top: 8px;
+  background: #0B0CB9;
+}
+.rectangle5
+{
+  position: absolute;
+  width: 143px;
+  height: 110px;
+  top: 99px;
+  left: 1283px;
+  background: #0B0CB9;
+}
+.windowhome4:hover
+{
+background: #FFE600;
+cursor: pointer;
+transition: 0.35s;
+}
+.windowhome4
+{
+  position: relative;
+  width: 15px;
+  height: 104px;
+  margin: 5px;
+  left: 5px;
+  top: 0px;
+  background: #2829FB;
+}
+.rectangle6
+{
+  position: absolute;
+  width: 92px;
+  height: 196px;
+  top: 705px;
+  left: 1347px;
+  background: #0000FF;
+}
+.windowhome5:hover
+{
+background: #FFE600;
+cursor: pointer;
+transition: 0.35s;
+}
+.windowhome5
+{
+  position: relative;
+  width: 14px;
+  height: 19px;
+  margin: 5px;
+  left: 10px;
+  top: 10px;
+  background: #9899FF;
+}
+.rectanglewindow
+{
+  position: absolute;
+  width: 62px;
+  height: 47px;
+  margin-top: 35px;
+  margin-left: 286px;
+  background: #FFE600;
+  opacity: 0%;
+  transition: 5s;
+  animation: show 7s 1;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  animation-iteration-count:infinite;
+  }
+  @keyframes show
+  {
+  0%
+  {
+  opacity:0;
+  }
+  45%
+  {
+  opacity:0.5;
+  }
+  }
+  }
+#rectangllll
+{
+  position: absolute;
+  width: 62px;
+  height: 47px;
+  background: #FFE600;
 }
