--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -23,6 +23,9 @@ body
 .pers
 {
   position: fixed;
+  width: 189px;
+  height: 237px;
+  display: flex;
   left: 825px;
   top: 542px;
   animation: pers 6s linear infinite;
@@ -43,12 +46,14 @@ body
   }
 }
 
+
 .screen1
 {
   width: 1920px;
   height: 901px;
   display: flex;
   overflow: hidden;
+  position: relative;
 }
 .homeleft
 {
@@ -302,37 +307,10 @@ transition: 0.35s;
   top: 10px;
   background: #9899FF;
 }
-/* .rectanglewindow
-{
-  position: absolute;
-  width: 62px;
-  height: 47px;
-  margin-top: 35px;
-  margin-left: 286px;
-  background: #FFE600;
-  opacity: 0%;
-  transition: 5s;
-  animation: show 7s 1;
-  animation-fill-mode: forwards;
-  animation-delay: 1s;
-  animation-iteration-count:infinite;
-  }
-  @keyframes show
-  {
-  0%
-  {
-  opacity:0;
-  }
-  45%
-  {
-  opacity:0.5;
-  }
-  }
-  } */
+
 .plashka
 {
   position: relative;
-  top: -21px;
   width: 1920px;
   height: 90px;
   background: #0000FE;
@@ -377,19 +355,123 @@ top: 21px;
   width: 1920px;
   height: 886px;
   display: flex;
+  overflow: hidden;
+  position: relative;
 }
 .piccloud
 {
-  position: relative;
+  position: absolute;
   margin-left: 0px;
   margin-top: -21px;
 }
 .cloud1
 {
+  background-image: url('../img/cloud1.svg');
+  position: relative;
+  width: 312px;
+  height: 154px;
+  top: 74px;
+  left: 0px;
+  animation: fly1 15s linear infinite;
+}
+@keyframes fly1
+{
+  0%
+  {
+    left: -1000px;
+  }
+  100%
+  {
+    left: 1700px;
+  }
+}
+
+.cloud3
+{
   background-image: url('../img/cloud2.svg');
   position: relative;
   width: 563px;
   height: 154px;
-  top: 0px;
+  top: 353px;
   left: 0px;
+  animation: fly3 12s linear infinite;
+}
+@keyframes fly3
+{
+  0%
+  {
+    left: -57px;
+  }
+  100%
+  {
+    left: 1500px;
+  }
+}
+.cloud2
+{
+  background-image: url('../img/cloud3.svg');
+  position: relative;
+  width: 177px;
+  height: 68px;
+  top: 92px;
+  left: 1647px;
+  animation: fly2 12s linear infinite;
+}
+@keyframes fly2
+{
+  0%
+  {
+    left: -57px;
+  }
+  100%
+  {
+    left: 1500px;
+  }
+}
+.cloud4
+{
+  background-image: url('../img/cloud4.svg');
+  position: relative;
+  width: 355px;
+  height: 128px;
+  top: 51px;
+  left: 204px;
+  animation: fly4 12s linear infinite;
+}
+@keyframes fly4
+{
+  0%
+  {
+    left: -57px;
+  }
+  100%
+  {
+    left: 1500px;
+  }
+}
+.text5
+{
+  position: relative;
+  width: 444px;
+  height: 66px;
+  left: -277px;
+  top: 85px;
+  font-family: Gilroy-Medium;
+  font-size: 24px;
+  color: #FFFFFF;
+}
+.text6
+{
+  position: relative;
+  width: 444px;
+  height: 125px;
+  left: 328px;
+  top: 366px;
+  font-family: Gilroy-Medium;
+  font-size: 24px;
+  color: #FFFFFF;
+}
+.mainclouds
+{
+  position: relative;
 }
