--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -73,9 +73,9 @@ body
 .animationwindow
 {
   position: relative;
-  width: 62px;
+  width: 65px;
   height: 47px;
-  top: 36px;
+  top: 35px;
   left: 285px;
   background: #FFE600;
   opacity: 0%;
@@ -99,10 +99,10 @@ body
   .animationwindow1
   {
     position: relative;
-    width: 62px;
-    height: 47px;
+    width: 30px;
+    height: 45px;
     top: 83px;
-    left: 181px;
+    left: 201px;
     background: #FFE600;
     opacity: 0%;
     transition: 5s;
@@ -126,8 +126,8 @@ body
     {
       position: relative;
       width: 74px;
-      height: 47px;
-      top: 139px;
+      height: 43px;
+      top: 142px;
       left: 0px;
       background: #FFE600;
       opacity: 0%;
@@ -151,10 +151,10 @@ body
       .animationwindow3
       {
         position: relative;
-        width: 88px;
-        height: 47px;
-        top: 188px;
-        left: 266px;
+        width: 62px;
+        height: 45px;
+        top: 193px;
+        left: 290px;
         background: #FFE600;
         opacity: 0%;
         transition: 10s;
@@ -177,9 +177,9 @@ body
         .animationwindow4
         {
           position: relative;
-          width: 64px;
+          width: 66px;
           height: 47px;
-          top: 336px;
+          top: 344px;
           left: 6px;
           background: #FFE600;
           opacity: 0%;
@@ -203,10 +203,10 @@ body
           .animationwindow5
           {
             position: relative;
-            width: 65px;
-            height: 47px;
-            top: 478px;
-            left: 178px;
+            width: 60px;
+            height: 43px;
+            top: 488px;
+            left: 182px;
             background: #FFE600;
             opacity: 0%;
             transition: 5s;
@@ -232,6 +232,58 @@ body
   margin-top: 135px;
   margin-left: -1px;
 }
+.animationwindow6
+{
+  position: relative;
+  width: 55px;
+  height: 54px;
+  top: 260px;
+  left: 140px;
+  background: #FFE600;
+  opacity: 0%;
+  transition: 8s;
+  animation: show 8s 1;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  animation-iteration-count:infinite;
+  }
+  @keyframes show
+  {
+  0%
+  {
+  opacity:0;
+  }
+  45%
+  {
+  opacity:0.5;
+  }
+  }
+  .animationwindow7
+  {
+    position: relative;
+    width: 67px;
+    height: 42px;
+    top: 475px;
+    left: 99px;
+    background: #FFE600;
+    opacity: 0%;
+    transition: 5s;
+    animation: show 20s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1s;
+    animation-iteration-count:infinite;
+    }
+    @keyframes show
+    {
+    0%
+    {
+    opacity:0;
+    }
+    45%
+    {
+    opacity:0.5;
+    }
+    }
 .rectangle
 {
   position: absolute;
@@ -359,44 +411,201 @@ transition: 0.35s;
   width: 675px;
   height: 901px;
   margin-left: 546px;
-}
-.panelka5
-{
   position: relative;
-  margin-left: 413px;
-  width: 269px;
-  height: 906px;
-}
-.panelka4
-{
-  position: relative;
-  margin-left: -500px;
-
 }
 .panelka3
 {
+  background: url('../img/panelka5.svg');
+  display: flex;
+  width: 360px;
+  height: 905px;
+  left: 399px;
   position: relative;
-  margin-left: -427px;
-  margin-top: 202px;
-  top: 7px;
 }
-.rectangle3
+.rectanglewindowright
 {
-  position: absolute;
-  width: 120px;
-  height: 640px;
-  top: 268px;
-  left: 1668px;
-  background: #0B0CB9;
-}
-.rectangle4
+  position: relative;
+  width: 48px;
+  height: 58px;
+  top: 37px;
+  left: 55px;
+  background: #FFE600;
+  opacity: 0%;
+  transition: 5s;
+  animation: show 20s 1;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  animation-iteration-count:infinite;
+  }
+  @keyframes show
+  {
+  0%
+  {
+  opacity:0;
+  }
+  45%
+  {
+  opacity:0.5;
+  }
+  }
+.rectanglewindowright1
 {
-  position: absolute;
-  width: 151px;
-  height: 470px;
-  top: 434px;
-  left: 1586px;
-  background: #2829FB;
+  position: relative;
+  width: 48px;
+  height: 58px;
+  top: 290px;
+  left: 134px;
+  background: #FFE600;
+  opacity: 0%;
+  transition: 5s;
+  animation: show 20s 1;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  animation-iteration-count:infinite;
+  }
+  @keyframes show
+  {
+  0%
+  {
+  opacity:0;
+  }
+  45%
+  {
+  opacity:0.5;
+  }
+  }
+.rectanglewindowright2
+{
+  position: relative;
+  width: 48px;
+  height: 58px;
+  top: 674px;
+  left: 86px;
+  background: #FFE600;
+  opacity: 0%;
+  transition: 5s;
+  animation: show 20s 1;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  animation-iteration-count:infinite;
+  }
+  @keyframes show
+  {
+  0%
+  {
+  opacity:0;
+  }
+  45%
+  {
+  opacity:0.5;
+  }
+  }
+  .rectangle3
+  {
+    position: absolute;
+    width: 120px;
+    height: 640px;
+    top: 285px;
+    left: 434px;
+    z-index: 9;
+    background: #0B0CB9;
+  }
+  .panelka4
+  {
+    background: url('../img/panelka4.svg');
+    display: flex;
+    width: 257px;
+    height: 928px;
+    left: -182px;
+    position: relative;
+    }
+  .rectanglewindowright3
+  {
+    position: relative;
+    width: 61px;
+    height: 61px;
+    top: 192px;
+    left: 37px;
+    background: #FFE600;
+    opacity: 0%;
+    transition: 5s;
+    animation: show 20s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1s;
+    animation-iteration-count:infinite;
+    }
+    @keyframes show
+    {
+    0%
+    {
+    opacity:0;
+    }
+    45%
+    {
+    opacity:0.5;
+    }
+    }
+  .rectanglewindowright4
+  {
+    position: relative;
+    width: 61px;
+    height: 61px;
+    top: 344px;
+    left: 76px;
+    background: #FFE600;
+    opacity: 0%;
+    transition: 5s;
+    animation: show 20s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1s;
+    animation-iteration-count:infinite;
+    }
+    @keyframes show
+    {
+    0%
+    {
+    opacity:0;
+    }
+    45%
+    {
+    opacity:0.5;
+    }
+    }
+  .rectanglewindowright5
+  {
+    position: relative;
+    width: 70px;
+    height: 69px;
+    top: 646px;
+    left: -86px;
+    background: #FFE600;
+    opacity: 0%;
+    transition: 5s;
+    animation: show 20s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1s;
+    animation-iteration-count:infinite;
+    }
+    @keyframes show
+    {
+    0%
+    {
+    opacity:0;
+    }
+    45%
+    {
+    opacity:0.5;
+    }
+    }
+    .rectangle4
+  {
+    position: absolute;
+    width: 151px;
+    height: 470px;
+    top: 459px;
+    left: 355px;
+    z-index: 10;
+    background: #2829FB;
 }
 .windowhome3:hover
 {
@@ -406,65 +615,102 @@ transition: 0.35s;
 }
 .windowhome3
 {
-  position: relative;
-  width: 47px;
-  height: 18px;
-  margin: 10px;
-  left: 8px;
-  top: 8px;
-  background: #0B0CB9;
+position: relative;
+width: 47px;
+height: 18px;
+margin: 10px;
+left: 8px;
+top: 8px;
+background: #0B0CB9;
 }
-.rectangle5
+.panelka5
 {
+  background: url('../img/panelka3.svg');
+  display: flex;
+  width: 187px;
+  height: 696px;
+  left: -5px;
+  top: 209px;
   position: absolute;
-  width: 143px;
-  height: 110px;
-  top: 99px;
-  left: 1283px;
-  background: #0B0CB9;
-}
-.windowhome4:hover
-{
-background: #FFE600;
-cursor: pointer;
-transition: 0.35s;
-}
-.windowhome4
-{
-  position: relative;
-  width: 15px;
-  height: 104px;
-  margin: 5px;
-  left: 5px;
-  top: 0px;
-  background: #2829FB;
-}
-.rectangle6
-{
-  position: absolute;
-  width: 92px;
-  height: 196px;
-  top: 705px;
-  left: 1347px;
-  background: #0000FF;
-}
-.windowhome5:hover
-{
-background: #FFE600;
-cursor: pointer;
-transition: 0.35s;
-}
-.windowhome5
-{
-  position: relative;
-  width: 14px;
-  height: 19px;
-  margin: 5px;
-  left: 10px;
-  top: 10px;
-  background: #9899FF;
-}
-
+  }
+  .rectanglewindowright6
+  {
+    position: relative;
+    width: 46px;
+    height: 53px;
+    top: 45px;
+    left: 17px;
+    background: #FFE600;
+    opacity: 0%;
+    transition: 5s;
+    animation: show 20s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1s;
+    animation-iteration-count:infinite;
+    }
+    @keyframes show
+    {
+    0%
+    {
+    opacity:0;
+    }
+    45%
+    {
+    opacity:0.5;
+    }
+    }
+  .rectanglewindowright7
+  {
+    position: relative;
+    width: 46px;
+    height: 53px;
+    top: 276px;
+    left: 77px;
+    background: #FFE600;
+    opacity: 0%;
+    transition: 5s;
+    animation: show 20s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1s;
+    animation-iteration-count:infinite;
+    }
+    @keyframes show
+    {
+    0%
+    {
+    opacity:0;
+    }
+    45%
+    {
+    opacity:0.5;
+    }
+    }
+  .rectanglewindowright8
+  {
+    position: relative;
+    width: 46px;
+    height: 53px;
+    top: 499px;
+    left: -75px;
+    background: #FFE600;
+    opacity: 0%;
+    transition: 5s;
+    animation: show 20s 1;
+    animation-fill-mode: forwards;
+    animation-delay: 1s;
+    animation-iteration-count:infinite;
+    }
+    @keyframes show
+    {
+    0%
+    {
+    opacity:0;
+    }
+    45%
+    {
+    opacity:0.5;
+    }
+    }
 .plashka
 {
   position: relative;
