--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -333,6 +333,7 @@
     }
     .piccloud
     {
+      background: url('../img/cloud.svg');
       position: absolute;
       transform: scale(190%);
       margin-left: 0px;
@@ -350,7 +351,7 @@
       position: relative;
       width: 444px;
       height: 66px;
-      left: -375px;
+      left: -373px;
       top: 85px;
       font-family: Gilroy-Medium;
       font-size: 38px;
@@ -410,6 +411,7 @@
     }
     .plashka2
     {
+      margin-left: 200px;
       position: relative;
       width: 1928px;
       height: 90px;
@@ -429,3 +431,717 @@
       height: 90px;
       background: #0000FE;
     }
+
+    .text13
+    {
+      z-index: 13;
+      position: relative;
+      margin-left: 121px;
+      margin-top: 286px;
+      font-family: Gilroy-Medium;
+      font-size: 30px;
+      color: #FFFFFF;
+    }
+  }
+  @media only screen and (min-device-width: 320px) and (max-device-width: 480px)
+  {
+    /* iPhone */
+    .screen1
+    {
+      position: relative;
+      width: 1926px;
+      height: 2408px;
+    }
+    .homeleft
+    {
+      width: 240px;
+      height: 1024px;
+      transform: scale(150%);
+      margin-left: 197px;
+      margin-top: 90px;
+    }
+    .panelka1
+    {
+      background: url('../img/panelka1.svg');
+      display: block;
+      width: 360px;
+      height: 905px;
+      position: relative;
+      margin-top: 106px;
+    }
+    .panelka2
+    {
+      position: relative;
+      margin-top: 135px;
+      margin-left: -1px;
+    }
+    .animationwindow
+    {
+      position: relative;
+      width: 65px;
+      height: 47px;
+      top: 460px;
+      left: 137px;
+      background: #FFE600;
+      opacity: 0%;
+      transition: 10s;
+      animation: show 3s 1;
+      animation-fill-mode: forwards;
+      animation-delay: 1s;
+      animation-iteration-count:infinite;
+      }
+      @keyframes show
+      {
+      0%
+      {
+      opacity:0;
+      }
+      45%
+      {
+      opacity:0.5;
+      }
+      }
+      .animationwindow1
+      {
+        position: relative;
+        width: 30px;
+        height: 47px;
+        z-index: 99;
+        top: 114px;
+        left: 151px;
+        background: #FFE600;
+        opacity: 0%;
+        transition: 5s;
+        animation: show 10s 1;
+        animation-fill-mode: forwards;
+        animation-delay: 1s;
+        animation-iteration-count:infinite;
+        }
+        @keyframes show
+        {
+        0%
+        {
+        opacity:0;
+        }
+        45%
+        {
+        opacity:0.5;
+        }
+        }
+        .animationwindow2
+        {
+          position: relative;
+          width: 74px;
+          height: 43px;
+          top: 142px;
+          left: 0px;
+          background: #FFE600;
+          opacity: 0%;
+          transition: 10s;
+          animation: show 20s 1;
+          animation-fill-mode: forwards;
+          animation-delay: 1s;
+          animation-iteration-count:infinite;
+          }
+          @keyframes show
+          {
+          0%
+          {
+          opacity:0;
+          }
+          45%
+          {
+          opacity:0.5;
+          }
+          }
+          .animationwindow3
+          {
+            position: relative;
+            width: 62px;
+            height: 45px;
+            top: 382px;
+            left: 112px;
+            background: #FFE600;
+            opacity: 0%;
+            transition: 10s;
+            animation: show 15s 1;
+            animation-fill-mode: forwards;
+            animation-delay: 1s;
+            animation-iteration-count:infinite;
+            }
+            @keyframes show
+            {
+            0%
+            {
+            opacity:0;
+            }
+            45%
+            {
+            opacity:0.5;
+            }
+            }
+            .animationwindow4
+            {
+              position: relative;
+              width: 66px;
+              height: 47px;
+              top: 344px;
+              left: 6px;
+              background: #FFE600;
+              opacity: 0%;
+              transition: 5s;
+              animation: show 5s 1;
+              animation-fill-mode: forwards;
+              animation-delay: 1s;
+              animation-iteration-count:infinite;
+              }
+              @keyframes show
+              {
+              0%
+              {
+              opacity:0;
+              }
+              45%
+              {
+              opacity:0.5;
+              }
+              }
+              .animationwindow5
+              {
+                position: relative;
+                width: 60px;
+                height: 43px;
+                top: 488px;
+                left: 182px;
+                background: #FFE600;
+                opacity: 0%;
+                transition: 5s;
+                animation: show 20s 1;
+                animation-fill-mode: forwards;
+                animation-delay: 1s;
+                animation-iteration-count:infinite;
+                }
+                @keyframes show
+                {
+                0%
+                {
+                opacity:0;
+                }
+                45%
+                {
+                opacity:0.5;
+                }
+                }
+      .rectangle
+      {
+        left: 74px;
+        margin-top: 107px;
+      }
+      .rectangle1
+      {
+        left: 282px;
+        margin-top: 109px;
+      }
+      .rectangle2
+      {
+        left: 260px;
+        margin-top: 105px;
+      }
+      .homeright
+      {
+        display: flex;
+        width: 418px;
+        height: 1024px;
+        top: 1271px;
+        transform: scale(130%);
+        margin-left: 522px;
+        position: relative;
+      }
+        .panelka4
+        {
+          background: url('../img/panelka4.svg');
+          display: flex;
+          width: 257px;
+          height: 928px;
+          left: -162px;
+          top: 4px;
+          transform: scale(115%);
+          position: relative;
+
+        }
+        .panelka5
+      {
+        display: flex;
+        width: 187px;
+        height: 696px;
+        left: -360px;
+        margin-left: 213px;
+        top: 253px;
+        position: absolute;
+        transform: scale(115%);
+      }
+      .rectangle3
+      {
+        width: 120px;
+        height: 640px;
+        top: 285px;
+        left: 434px;
+        z-index: 9;
+        background: #0B0CB9
+      }
+      .rectangle5
+      {
+        position: absolute;
+        width: 143px;
+        height: 110px;
+        top: 91px;
+        left: -94px;
+        background: #0B0CB9;
+      }
+      .rectangle6
+      {
+      position: absolute;
+      width: 92px;
+      height: 196px;
+      top: 804px;
+      left: -30px;
+      background: #0000FF;
+      }
+      .pers
+      {
+        position: fixed;
+        width: 309px;
+        height: 338px;
+        display: flex;
+        left: 731px;
+        top: 720px;
+        z-index: 999;
+        animation: pers 6s linear infinite;
+      }
+      .maintext1
+      {
+        position: absolute;
+        width: 634px;
+        height: 336px;
+        top: 73px;
+        left: 393px;
+      }
+      .text
+      {
+        position: absolute;
+        width: 612.85px;
+        height: 219.8px;
+        left: 400px;
+        top: 110px;
+        font-family: Gilroy;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 120px;
+        line-height: 110px;
+        color: #0000FD;
+      }
+      .text1
+      {
+        position: absolute;
+        width: 759px;
+        height: 220px;
+        left: 407px;
+        top: 364px;
+        font-family: F77 Minecraft;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 110px;
+        line-height: 82px;
+        color: #0000FD;
+      }
+      .plashka
+      {
+        position: relative;
+        width: 1920px;
+        height: 90px;
+        background: #0000FE;
+      }
+      .hearts
+      {
+        position: absolute;
+        top: -12px;
+        left: 1373px;
+        transform: scale(80%);
+      }
+      .text3
+      {
+        position: absolute;
+        width: 323px;
+        height: 24px;
+        left: 1103px;
+        top: 36px;
+        font-family: F77 Minecraft;
+        font-size: 24px;
+        color: #FFFFFF;
+      }
+      .number1
+      {
+       position: relative;
+       top: 21px;
+       width: 57px;
+       margin-left: 189px;
+      }
+      .text4
+      {
+        position: absolute;
+        width: 126px;
+        height: 23px;
+        margin-left: 275px;
+        top: 38px;
+        font-family: F77 Minecraft;
+        font-size: 24px;
+        color: #FFFFFF;
+      }
+      .piccloud
+      {
+        background: url('../img/cloud.svg');
+        position: absolute;
+        transform: scale(270%);
+        margin-left: 0px;
+        margin-top: 0px;
+      }
+      .mainclouds
+      {
+        position: relative;
+        position: relative;
+        top: 305px;
+        transform: scale(140%);
+      }
+      .screen3
+      {
+        width: 1923px;
+        height: 1677px;
+        display: flex;
+        position: relative;
+      }
+      .textplash
+      {
+        width: 733px;
+        height: 280px;
+        margin-top: 575px;
+        margin-left: 159px;
+          background: #0000FE;
+          z-index: 19;
+      }
+      .text15
+      {
+        position: absolute;
+        width: 770px;
+        height: 23px;
+        margin-left: 168px;
+        top: 568px;
+        font-family: Gilroy-Bold;
+        font-size: 100px;
+        color: #FFFFFF;
+        z-index: 20;
+      }
+      .text16
+      {
+        position: absolute;
+        width: 407px;
+        height: 23px;
+        margin-left: 1345px;
+        top: 1374px;
+        font-family: Gilroy-Medium;
+        font-size: 30px;
+        color: #FFFFFF;
+        z-index: 20;
+      }
+      .textplash1
+      {
+        width: 253px;
+        height: 280px;
+        margin-top: 1291px;
+        margin-left: 435px;
+        background: #0000FE;
+        z-index: 19;
+      }
+      .picspace
+      {
+        transform: scale(150%);
+    position: absolute;
+    margin-left: 0px;
+    margin-top: 285px;
+      }
+      .section
+      {
+        position: absolute;
+      }
+      .animationspace1:hover
+      {
+      background-image: url('../img/spaceani2.png');
+      cursor: pointer;
+      transition: 0.35s;
+      }
+      .animationspace1
+      {
+        transform: scale(150%);
+    top: 277px;
+        z-index: 10;
+      position: relative;
+      background-image: url('../img/spaceani1.png');
+      }
+      .plashka3
+      {
+        position: relative;
+        width: 1920px;
+        height: 90px;
+        background: #0000FE;
+      }
+      .hearts3
+      {
+        position: absolute;
+        top: -12px;
+        left: 1401px;
+        transform: scale(80%);
+      }
+      .text9
+      {
+        position: absolute;
+        width: 348px;
+        height: 24px;
+        margin-left: 1133px;
+        top: 38px;
+        font-family: F77 Minecraft;
+        font-size: 24px;
+        color: #FFFFFF;
+      }
+      .number3
+      {
+       position: relative;
+       top: 21px;
+    width: 57px;
+    margin-left: 148px;
+      }
+      .text10
+      {
+        position: absolute;
+        width: 126px;
+        height: 23px;
+        left: 285px;
+        top: 38px;
+        font-family: F77 Minecraft;
+        font-size: 24px;
+        color: #FFFFFF;
+      }
+      .screen4
+      {
+        width: 1920px;
+        height: 899px;
+        display: flex;
+        overflow: hidden;
+        position: relative;
+      }
+      .row{
+        width: 1920px;
+        height: 899px;
+        text-shadow: 0 0 0px 0px rgba(255, 0, 0, 1);
+        vertical-align: middle;
+        padding: absolute;
+        top: 100px;
+        color: #0000FF;
+        overflow: hidden;
+        white-space: nowrap;
+      }
+      .p1{
+        font-size: 64px;
+        font-family: 'Ctrln';
+        animation: lin 30s alternate-reverse infinite;
+      }
+      .p2{
+        font-size: 64px;
+        font-family: 'Ctrln';
+        animation: lin2 40s alternate-reverse infinite;
+      }
+      @keyframes lin {
+        from { text-indent: -100%}
+        to { text-indent: 0%}
+      }
+      @keyframes lin2 {
+        from { text-indent: 0%}
+        to { text-indent: -100%}
+      }
+      .shadow
+      {
+
+        position: absolute;
+        top: 217px;
+        left: 480px;
+      }
+      .oldhome
+      {
+        position: absolute;
+        top: -29px;
+        left: 516px;
+      }
+      .oldhousewindow
+      {
+        position: relative;
+        width: 77px;
+        height: 125px;
+        top: 700px;
+        left: 580px;
+        background: #FFE600;
+        opacity: 0%;
+        transition: 5s;
+        animation: show 5s 1;
+        animation-fill-mode: forwards;
+        animation-delay: 1s;
+        animation-iteration-count:infinite;
+        }
+        @keyframes show
+        {
+        0%
+        {
+        opacity:0;
+        }
+        45%
+        {
+        opacity:0.5;
+        }
+        }
+      .oldhousewindow1
+      {
+        position: relative;
+        width: 77px;
+        height: 125px;
+        top: 573px;
+        left: 235px;
+        background: #FFE600;
+        opacity: 0%;
+        transition: 5s;
+        animation: show 10s 1;
+        animation-fill-mode: forwards;
+        animation-delay: 1s;
+        animation-iteration-count:infinite;
+        }
+        @keyframes show
+        {
+        0%
+        {
+        opacity:0;
+        }
+        45%
+        {
+        opacity:0.5;
+        }
+        }
+        .plashka4
+        {
+          position: relative;
+          width: 1920px;
+          height: 90px;
+          background: #0000FE;
+        }
+        .hearts4
+        {
+          position: absolute;
+          top: -12px;
+          left: 1386px;
+          transform: scale(80%);
+        }
+        .text11
+        {
+          position: absolute;
+          width: 348px;
+          height: 24px;
+          margin-left: 1114px;
+          top: 38px;
+          font-family: F77 Minecraft;
+          font-size: 24px;
+          color: #FFFFFF;
+        }
+        .number4
+        {
+         position: relative;
+        top: 21px;
+        width: 57px;
+         left: 200px;
+        }
+        .text12
+        {
+          position: absolute;
+          width: 126px;
+          height: 23px;
+          left: 276px;
+          top: 38px;
+          font-family: F77 Minecraft;
+          font-size: 24px;
+          color: #FFFFFF;
+        }
+        .screen5
+        {
+          width: 1920px;
+          height: 1533px;
+          display: flex;
+          position: relative;
+        }
+        .backgroundpic
+        {
+          transform: scale(1.5);
+          top: 283px;
+          position: absolute;
+          margin-left: 0px;
+        }
+        .text13
+        {
+          z-index: 13;
+          position: relative;
+          margin-left: 234px;
+          margin-top: 1265px;
+          font-family: Gilroy-Medium;
+          font-size: 40px;
+          color: #FFFFFF;
+        }
+        .futor
+        {
+          width: 1920px;
+          height: 420px;
+          display: flex;
+          background-color:#0000FE;
+          position: relative;
+        }
+        .exit
+        {
+          position: relative;
+          margin-top: 81px;
+          left: 41px;
+        }
+        .text14
+        {
+          z-index: 13;
+          position: relative;
+          left: -124px;
+          margin-top: 240px;
+          font-family: Gilroy-Bold;
+          font-size: 40px;
+          color: #FFFFFF;
+        }
+        .logo
+      {
+          left: 1451px;
+          margin-top: 245px;
+          position: relative;
+      }
+      .text7
+      {
+        margin-left: 1100px;
+      }
+      .number2
+      {
+        margin-left: 193px;
+      }
+      .text8
+      {
+        margin-left: 273px;
+      }
+      .hearts2
+      {
+        left: 1373px;
+      }
+  }
